templogin. no passwd. session. untested

--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ appname: "rideplan"
 layout: "main"
 charset: "UTF-8"
 template: "template_toolkit"
+#session: "simple" #default. in memory
 
 engines:
   template:
